--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
     "eslint": "^8.47.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react": "^7.33.2",
+    "prettier": "3.0.2",
     "ts-node": "^10.9.1"
   }
 }
