--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -17,8 +17,8 @@ jobs:
         run: npm ci
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
-      - name: Run Playwright tests
-        run: npx playwright test
+      - name: Run Cucumber tests
+        run: npm test
       - uses: actions/upload-artifact@v3
         if: always()
         with:
