--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,9 +1,5 @@
-name: Playwright Tests
-on:
-  push:
-    branches: [main, master]
-  pull_request:
-    branches: [main, master]
+name: Playwright Tests Cucumber BDD
+on: workflow_dispatch
 jobs:
   test:
     timeout-minutes: 60
