--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -13,11 +13,5 @@ jobs:
         run: npm ci
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
-      - name: Run Cucumber tests
+      - name: Run Playwright Tests Cucumber BDD
         run: npm test
-      - uses: actions/upload-artifact@v3
-        if: always()
-        with:
-          name: playwright-report
-          path: playwright-report/
-          retention-days: 30
