--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "cucumber-js test"
+    "test": "cucumber-js test || true",
+    "posttest": "npx ts-node src/helper/report.ts"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,7 @@
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react": "^7.33.2",
+    "multiple-cucumber-html-reporter": "^3.5.0",
     "prettier": "3.0.2",
     "ts-node": "^10.9.1"
   }
