--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "doc": "docs"
   },
   "scripts": {
+    "pretest": "npx ts-node src/helper/init.ts",
     "test": "cucumber-js test || true",
     "posttest": "npx ts-node src/helper/report.ts",
+    "test:failed": "cucumber-js -p rerun @rerun.txt",
     "prettier": "npx prettier --write .",
     "lint:check": "eslint . --max-warnings=0",
     "lint:fix": "eslint . --fix"
@@ -24,6 +26,7 @@
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react": "^7.33.2",
+    "fs-extra": "^11.2.0",
     "multiple-cucumber-html-reporter": "^3.5.0",
     "prettier": "3.0.2",
     "ts-node": "^10.9.1"
